fixed spacing between hackathon and gold sponsors

--- a/src/page/Sponsors/Sponsors.css
+++ b/src/page/Sponsors/Sponsors.css
@@ -30,11 +30,15 @@
 }
 
 .sponsors p {
-  margin: 30px;
+  margin: 0px 0px 15px 0px;
   width: 100%;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
+}
+
+.sponsors div {
+  margin-bottom: 50px;
 }
 
 .sponsors div img {
@@ -82,8 +86,8 @@
 @media (min-width: 1200px) {
   .sponsors h3 {
     width: 100%;
-    font-size: 48px;
+    font-size: 40px;
     line-height: 60px;
-    margin: 35px auto;
+    margin: 10px auto 20px auto;
   }
 }
